fix: busca por tipo agora é realizada com sucesso